--- a/js/.travis.yml
+++ b/js/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - "6"
 branches:
     only:
-    - js
-before_install: cd js
+    - master
+    - devel
 install: npm install
 script:
     - npm test
