--- a/package.json
+++ b/package.json
@@ -29,14 +29,12 @@
   },
   "scripts": {
     "test": "node_modules/.bin/mocha test",
-    "doc-cloud": "rm -rf doc/cloud && grunt doc-gen-cloud",
-    "doc-objects": "rm -rf doc/objects && grunt doc-gen-objects",
-    "doc": "npm run doc-cloud && npm run doc-objects",
+    "doc": "rm -rf doc && grunt doc-gen",
     "jshint": "node_modules/.bin/jshint lib"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ortelio/rapp-api-js"
+    "url": "git+https://github.com/rapp-project/rapp-api"
   },
   "keywords": [
     "robotics",
